Moved CV page to remove .html extension

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="six columns">
-    <div class=name> <a href="index.html">Michael Malick</a></div>
+    <div class=name> <a href="/">Michael Malick</a></div>
 
 
     <div class = sideinfo> 
@@ -9,7 +9,7 @@
     </div>
 
     <div class = navigation> 
-        <a href="cv.html">CV</a> </br>
+        <a href="/cv">CV</a> </br>
         <a href="http://www.twitter.com/michaelmalick">Twitter</a></br>
     </div>
 </div>
