--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
 
 	<!-- CSS 
     ============================================================= -->
-	<link rel="stylesheet" href="stylesheets/malickmj.css">
-	<link rel="stylesheet" href="stylesheets/skeleton.css">
-	<link rel="stylesheet" href="stylesheets/layout.css">
+	<link rel="stylesheet" href="/stylesheets/malickmj.css">
+	<link rel="stylesheet" href="/stylesheets/skeleton.css">
+	<link rel="stylesheet" href="/stylesheets/layout.css">
 
 	<!--[if lt IE 9]>
 		<script 
