Reworked links on CV page
Converted section links on the CV page to mirror the look of the
navigation sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,12 +73,12 @@
 		</div>
 
 
-		<div class="six columns">
+		<div class="five columns">
             {% include sidebar.html %}
 		</div>
 
 
-		<div class="ten columns">
+		<div class="eleven columns">
 			<p></p>
 			<ul class="square">
             {{ content }}
