--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 	<!-- Basic Page Needs 
     ============================================================= -->
 	<meta charset="utf-8">
-	<title>{{ site.name }}</title>
+	<title>{{ page.title }}</title>
 	<meta name="Personal Website" content="">
 	<meta name="Michael Malick" content="">
 
