--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
 
     <div class = navigation> 
         <a href="/cv">CV</a> </br>
-        <a href="/R">R</a> </br>
+        <a href="/r-intro">R</a> </br>
         <a href="http://www.twitter.com/michaelmalick">Twitter</a></br>
     </div>
 </div>
