Added an 'About' link and cleaned up css file

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,8 +9,9 @@
     </div>
 
     <div class = navigation> 
+        <a href="/">About</a> </br>
         <a href="/cv">CV</a> </br>
-        <a href="/r-intro">R</a> </br>
+        <a href="/r-intro">R Intro</a> </br>
         <a href="http://www.twitter.com/michaelmalick">Twitter</a></br>
     </div>
 </div>
