--- a/stylesheets/malickmj.css
+++ b/stylesheets/malickmj.css
@@ -89,7 +89,7 @@ ul, ol {
 
 /* LINKS ---------------------------------------------------------------------*/
 a:link {
-    color: #888888;
+    color: #005599;
     margin: 0;
     padding: 0;
     vertical-align: baseline;
@@ -97,11 +97,11 @@ a:link {
 }
 a:hover {
     text-decoration: none;
-    color: #0099EE;
+    background-color: #EEEEEE;
 }
 a:active {
     text-decoration: none
-    color: #00BBFF;
+    color: #005599;
 }
 a:visited {
     color: #888888;
