Moved nav-bar to top, changed heading size

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,10 +8,11 @@
         <a href="mailto:mmalick@sfu.ca">mmalick@sfu.ca</a>
     </div>
 
-    <div class = navigation> 
-        <a href="/">About</a> </br>
-        <a href="/cv">CV</a> </br>
-        <a href="/r-intro">R Intro</a> </br>
-        <a href="http://www.twitter.com/michaelmalick">Twitter</a></br>
-    </div>
+    <!-- <div class = navigation> --> 
+    <!--     <a href="/">About</a> </br> -->
+    <!--     <a href="/cv">CV</a> </br> -->
+    <!--     <a href="/r-intro">R Intro</a> </br> -->
+    <!--     <a href="http://www.twitter.com/michaelmalick">Twitter</a></br> -->
+    <!-- </div> -->
+
 </div>
