--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
 		</div>
 
 
-		<div class="five columns">
+		<div class="four columns">
             {% include sidebar.html %}
 		</div>
 
@@ -80,6 +80,8 @@
 		<div class="eleven columns">
 			<p></p>
 			<ul class="square">
+            {% include topbar.html %}
+            <hr />
             {{ content }}
 			</ul>
 		</div>
