--- a/stylesheets/malickmj.css
+++ b/stylesheets/malickmj.css
@@ -151,15 +151,16 @@ hr { /* Horizontal rule */
 .sideinfo {
     font-family: Lato, "Helvetica Neue", Helvetica, sans-serif; 
     margin-top: 5px;
-    font-size: 16px;
+    font-size: 17px;
     line-height: 1.2;
     padding-left: 25px;
 }
 .navigation {
     font-family: Lato, "Helvetica Neue", Helvetica, sans-serif; 
+    font-size: 18px;
     margin-top: 18px;
     margin-top: 15px;
-    margin-bootom: 15px;
+    margin-botom: 15px;
     line-height: 1.75;
 }
 .navigation a:link {
