--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,10 +90,7 @@
 	    <!-- Footer
 	    ========================================================= -->
 		<div class="sixteen columns">
-			<h1 class="remove-bottom" style="margin-top:40px"></h1>
-			<hr />
-			<div class=footer>&copy; Michael Malick 2013-2014
-            </div>
+            {% include bottombar.html %}
 		</div>
 
 
