Added a colophon link in footer

--- a/_includes/bottombar.html
+++ b/_includes/bottombar.html
@@ -8,7 +8,7 @@
     <table width="100%" border=0>
       <tr>
         <td class="tdleft">&copy; Michael Malick 2013-2014</td>
-        <td class="tdright">Jekyll + Github</td> 
+        <td class="tdright"><a href="/colophon.html">Jekyll + Github</a></td> 
       </tr>
     </table>
 </div>
