--- a/stylesheets/malickmj.css
+++ b/stylesheets/malickmj.css
@@ -224,7 +224,7 @@ hr { /* Horizontal rule */
 }
 .footer a:hover {
     text-decoration: none;
-    color: #0099EE;
+    color: #4A525A;
 }
 .footer a:active {
     text-decoration: none;
