Fixed top nav-bar centering
Fixed centering issue on top navigation bar and moved the twitter and github
links to the left side bar.

--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -3,9 +3,10 @@
       <tr>
         <td><a href="/index.html">About</a></td>
         <td><a href="/cv">CV</a></td> 
+        <!-- <td><a href="/research">Research</a></td> --> 
         <td><a href="/r-intro">R Intro</a></td> 
-        <td><a href="http://www.github.com/michaelmalick">Code</a></td>
-        <td><a href="http://www.twitter.com/michaelmalick">Twitter</a></td>
+        <!-- <td><a href="http://www.github.com/michaelmalick">Code</a></td> -->
+        <!-- <td><a href="http://www.twitter.com/michaelmalick">Twitter</a></td> -->
       </tr>
     </table>
 </div>
