--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,14 @@
     <div class = sideinfo> 
         Ph.D. Candidate </br>
         Simon Fraser Univeristy </br>
-        <a href="mailto:mmalick@sfu.ca">mmalick@sfu.ca</a>
+        <a href="mailto:mmalick@sfu.ca">mmalick@sfu.ca</a> <br>
+
+        <img src="/images/tw-grey.png" alt="Twtr" width="20px" align="left"/>
+        <a href="http://www.twitter.com/michaelmalick">Twitter</a> <br>
+
+        <img src="/images/github-grey.png" alt="GitHub" width="20px" align="left"/>
+        <a href="http://www.github.com/michaelmalick"> Github</a>
+        
     </div>
 
     <!-- <div class = navigation> --> 
