--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,103 +1,79 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<html lang="en">
 <head>
 
-	<!-- Basic Page Needs 
-    ============================================================= -->
-	<meta charset="utf-8">
-	<title>{{ page.title }}</title>
-	<meta name="Personal Website" content="">
-	<meta name="Michael Malick" content="">
-
-    <!-- Bing Webmaster 
-    ============================================================= -->
-    <meta name="msvalidate.01" content="9C67991D450A7241BFAD52B41A520091" />
+  <!-- Basic Page Needs 
+  ========================================================================== -->
+  <meta charset="utf-8">
+  <title>{{ page.title }}</title>
+  <meta name="Personal Website" content="">
+  <meta name="Michael Malick" content="">
 
 
-	<!-- Google Analytics
-    ============================================================= -->
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-42838600-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
+  <!-- Bing Webmaster 
+  ========================================================================== -->
+  <meta name="msvalidate.01" content="9C67991D450A7241BFAD52B41A520091" />
 
 
-	<!-- Mobile Specific Metas
-    ============================================================= -->
-	<meta name="viewport" content="width=device-width, 
-        initial-scale=1, maximum-scale=1">
+  <!-- Google Analytics
+  ========================================================================== -->
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-42838600-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
 
 
-	<!-- CSS 
-    ============================================================= -->
-	<link rel="stylesheet" href="/stylesheets/malickmj.css">
-	<link rel="stylesheet" href="/stylesheets/skeleton.css">
-	<link rel="stylesheet" href="/stylesheets/layout.css">
-
-	<!--[if lt IE 9]>
-		<script 
-            src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-        </script>
-	<![endif]-->
+  <!-- Mobile Specific Metas
+  ========================================================================== -->
+  <meta name="viewport" content="width=device-width, 
+    initial-scale=1, maximum-scale=1">
 
 
-	<!-- Favicons 
-    ============================================================= -->
-	<link rel="shortcut icon" href="/images/favicon.ico">
+  <!-- CSS 
+  ========================================================================== -->
+  <link rel="stylesheet" href="/stylesheets/malickmj.css">
+  <link rel="stylesheet" href="/stylesheets/skeleton.css">
+  <link rel="stylesheet" href="/stylesheets/layout.css">
+
+
+  <!-- Favicons 
+  ========================================================================== -->
+  <link rel="shortcut icon" href="/images/favicon.ico">
 
 </head>
 
 
+
+<!-- Main Page Layout
+============================================================================ -->
 <body>
 
-	<!-- Primary Page Layout
-	============================================================= -->
+  <div class="container">
+    <div class="sixteen columns">
+      <h1 style="margin-top:40px"></h1>
+    </div>
+    <div class="four columns">
+      {% include sidebar.html %}
+    </div>
+    <div class="eleven columns">
+      <p></p>
+      <ul class="square">
+       {% include topbar.html %}
+        <hr/>
+        {{ content }}
+      </ul>
+    </div>
+    <div class="sixteen columns">
+      {% include bottombar.html %}
+    </div>
+  </div>
 
-	<div class="container">
-
-		<div class="sixteen columns">
-			<h1 style="margin-top:40px"></h1>
-		</div>
-
-
-		<div class="four columns">
-            {% include sidebar.html %}
-		</div>
-
-
-		<div class="eleven columns">
-			<p></p>
-			<ul class="square">
-            {% include topbar.html %}
-            <hr />
-            {{ content }}
-			</ul>
-		</div>
-
-
-	    <!-- Footer
-	    ========================================================= -->
-		<div class="sixteen columns">
-            {% include bottombar.html %}
-		</div>
-
-
-    </div><!-- container -->
-
-
-<!-- End Document
-================================================================= -->
 </body>
 </html>
