General html and file cleanup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
 
   <!-- CSS 
   ========================================================================== -->
-  <link rel="stylesheet" href="/stylesheets/malickmj.css">
+  <link rel="stylesheet" href="/stylesheets/malick.css">
   <link rel="stylesheet" href="/stylesheets/skeleton.css">
-  <link rel="stylesheet" href="/stylesheets/layout.css">
+  <link rel="stylesheet" href="/stylesheets/skeleton-layout.css">
 
 
   <!-- Favicons 
@@ -71,6 +71,7 @@
       </ul>
     </div>
     <div class="sixteen columns">
+      <hr/>
       {% include bottombar.html %}
     </div>
   </div>
