--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,9 +6,8 @@
   </br>
   <a href="mailto:mmalick@sfu.ca">mmalick@sfu.ca</a> 
   </br>
-  <img src="/images/tw-grey.png" alt="Twtr" width="20px" align="left"/>
-    <a href="http://www.twitter.com/michaelmalick">Twitter</a> 
-  </br>
-  <img src="/images/github-grey.png" alt="GitHub" width="20px" align="left"/>
-    <a href="http://www.github.com/michaelmalick"> Github</a>
+  <a href="http://www.twitter.com/michaelmalick">
+    <img src="/images/tw-grey.png" alt="Twtr" width="20px" align="left"/></a>
+  <a href="http://www.github.com/michaelmalick">
+    <img src="/images/github-grey.png" alt="GitHub" width="20px" align="left"/></a>
 </div>
