Added research page with spring bloom research

--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -3,7 +3,7 @@
     <tr>
       <td><a href="/index.html">About</a></td>
       <td><a href="/cv">CV</a></td> 
-      <!-- <td><a href="/research">Research</a></td> --> 
+      <td><a href="/research">Research</a></td>
       <td><a href="/r-intro">R Intro</a></td> 
     </tr>
   </table>
