Added google verification code to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,11 @@
   ========================================================================== -->
   <link rel="shortcut icon" href="/images/favicon.ico">
 
+
+  <!-- Google Apps 
+  ========================================================================== -->
+  <meta name="google-site-verification" content="2MzQ2co81nhL0Wug0UlmwcWYrYUmLBa4tbVsgntde5I" /> 
+
 </head>
 
 
