Change top nav font to Open Sans (matches body)

--- a/stylesheets/malick.css
+++ b/stylesheets/malick.css
@@ -183,8 +183,8 @@ dl {
 }
 .navigation {
     /* font-family: Lato, "Helvetica Neue", Helvetica, sans-serif; */ 
-    /* font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif; */ 
-    font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, sans-serif; 
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif; 
+    /* font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, sans-serif; */ 
     font-size: 18px;
     margin-top: 18px;
     margin-top: 15px;
