Clean up formatting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,21 +2,18 @@
 <html lang="en">
 <head>
 
-  <!-- Basic Page Needs 
-  ========================================================================== -->
+  <!-- Basic Page Needs -->
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
   <meta name="Personal Website" content="">
   <meta name="Michael Malick" content="">
 
 
-  <!-- Bing Webmaster 
-  ========================================================================== -->
+  <!-- Bing Webmaster -->
   <meta name="msvalidate.01" content="2FFFAA9DC6DA7A95AAEF4DEE1377E7D1" />
 
 
-  <!-- Google Analytics
-  ========================================================================== -->
+  <!-- Google Analytics -->
   <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-42838600-1']);
@@ -30,24 +27,19 @@
   </script>
 
 
-  <!-- Mobile Specific Metas
-  ========================================================================== -->
-  <meta name="viewport" content="width=device-width, 
+  <!-- Mobile Specific Metas -->
+  <meta name="viewport" content="width=device-width,
     initial-scale=1, maximum-scale=1">
 
 
-  <!-- CSS 
-  ========================================================================== -->
+  <!-- CSS -->
   <link rel="stylesheet" href="/stylesheets/malick.css">
   <link rel="stylesheet" href="/stylesheets/skeleton.css">
   <link rel="stylesheet" href="/stylesheets/skeleton-layout.css">
 
 
-  <!-- Favicons 
-  ========================================================================== -->
+  <!-- Favicons -->
   <link rel="shortcut icon" href="/images/favicon.ico">
-
-
 
 </head>
 
