Add google scholar icon/link on sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,4 +10,6 @@
     <img src="/images/tw-grey.png" alt="Twtr" width="20px" align="left"/></a>
   <a href="http://www.github.com/michaelmalick">
     <img src="/images/github-grey.png" alt="GitHub" width="20px" align="left"/></a>
+  <a href="https://scholar.google.com/citations?user=98VPn3kAAAAJ&hl">
+    <img src="/images/google-grey.png" alt="Google Scholar" width="20px" align="left"/></a>
 </div>
