--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,12 @@
 <div class=name> <a href="/">Michael Malick</a></div>
 <div class = sideinfo>
-  Ph.D. Candidate
+  Post-doctoral Researcher
   </br>
-  Simon Fraser Univeristy
+  Oregon State University
   </br>
-  <a href="mailto:mmalick@sfu.ca">mmalick@sfu.ca</a>
+  National Marine Fisheries Service
+  </br>
+  <a href="mailto:mjm@michaelmalick.com">mjm@michaelmalick.com</a>
   </br>
   <a href="http://www.twitter.com/michaelmalick">
     <img src="/images/tw-grey.png" alt="Twtr" width="20px" align="left"/></a>
