Remove dash in post-doctoral

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class=name> <a href="/">Michael Malick</a></div>
 <div class = sideinfo>
-  Post-doctoral Researcher
+  Postdoctoral Researcher
   </br>
   Oregon State University
   </br>
