Add NRC postdoctoral fellowship to CV

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,9 +2,7 @@
 <div class = sideinfo>
   Postdoctoral Researcher
   </br>
-  Oregon State University
-  </br>
-  National Marine Fisheries Service
+  NOAA Fisheries
   </br>
   <a href="mailto:mjm@michaelmalick.com">mjm@michaelmalick.com</a>
   </br>
