Add salmon-net to CV + ORCiD to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,4 +12,6 @@
     <img src="/images/github-grey.png" alt="GitHub" width="20px" align="left"/></a>
   <a href="https://scholar.google.com/citations?user=98VPn3kAAAAJ&hl">
     <img src="/images/google-grey.png" alt="Google Scholar" width="20px" align="left"/></a>
+  <a href=" https://orcid.org/0000-0002-8376-5476">
+    <img src="/images/orcid-grey.png" alt="ORCiD" width="20px" align="left"/></a>
 </div>
