Update links with HTTPS

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,9 +6,9 @@
   </br>
   <a href="mailto:mjm@michaelmalick.com">mjm@michaelmalick.com</a>
   </br>
-  <a href="http://www.twitter.com/michaelmalick">
+  <a href="https://twitter.com/michaelmalick">
     <img src="/images/tw-grey.png" alt="Twtr" width="20px" align="left"/></a>
-  <a href="http://www.github.com/michaelmalick">
+  <a href="https://github.com/michaelmalick">
     <img src="/images/github-grey.png" alt="GitHub" width="20px" align="left"/></a>
   <a href="https://scholar.google.com/citations?user=98VPn3kAAAAJ&hl">
     <img src="/images/google-grey.png" alt="Google Scholar" width="20px" align="left"/></a>
