--- a/_includes/bottombar.html
+++ b/_includes/bottombar.html
@@ -1,8 +1,8 @@
 <div class="footer">
   <table width="100%" border=0>
     <tr>
-      <td class="tdleft">&copy; Michael Malick 2013-2018</td>
-      <td class="tdright"><a href="/colophon.html">Jekyll + Github</a></td>
+      <td class="footer" align="left">&copy; Michael Malick 2013-2018</td>
+      <td class="footer" align="right"><a href="/colophon.html">Jekyll + Github</a></td>
     </tr>
   </table>
 </div>
