--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,6 +1,6 @@
 <div class="navigation">
   <table width="100%" border=0>
-    <tr>
+    <tr align="center">
       <td><a href="/index.html">About</a></td>
       <td><a href="/cv">CV</a></td>
       <td><a href="/research">Research</a></td>
