Refactor 'research' pages to use jekyll post structure
The 'research' section of the website was refactored so that each research page
is now a post and the research index page is auto-generated using liquid syntax.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,11 +7,11 @@
   <a href="mailto:mjm@michaelmalick.com">mjm@michaelmalick.com</a>
   </br>
   <a href="https://twitter.com/michaelmalick">
-    <img src="/images/tw-grey.png" alt="Twtr" width="20px" align="left"/></a>
+    <img class="img_sidelink" src="/assets/images/tw-grey.png" alt="Twtr"/></a>
   <a href="https://github.com/michaelmalick">
-    <img src="/images/github-grey.png" alt="GitHub" width="20px" align="left"/></a>
+    <img class="img_sidelink" src="/assets/images/github-grey.png" alt="GitHub"/></a>
   <a href="https://scholar.google.com/citations?user=98VPn3kAAAAJ&hl">
-    <img src="/images/google-grey.png" alt="Google Scholar" width="20px" align="left"/></a>
+    <img class="img_sidelink" src="/assets/images/google-grey.png" alt="Google Scholar"/></a>
   <a href=" https://orcid.org/0000-0002-8376-5476">
-    <img src="/images/orcid-grey.png" alt="ORCiD" width="20px" align="left"/></a>
+    <img class="img_sidelink" src="/assets/images/orcid-grey.png" alt="ORCiD"/></a>
 </div>
