--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,9 +1,9 @@
 <div class="navigation">
   <table width="100%" border=0>
     <tr align="center">
-      <td><a href="/index.html">About</a></td>
+      <td><a href="/">About</a></td>
       <td><a href="/cv">CV</a></td>
-      <td><a href="/research">Research</a></td>
+      <td><a href="/category/research">Research</a></td>
       <td><a href="/r-intro">R Intro</a></td>
     </tr>
   </table>
