--- a/_includes/bottombar.html
+++ b/_includes/bottombar.html
@@ -2,7 +2,7 @@
   <table width="100%" border=0>
     <tr>
       <td class="footer" align="left">&copy; Michael Malick 2013-2018</td>
-      <td class="footer" align="right"><a href="/colophon.html">Jekyll + Github</a></td>
+      <td class="footer" align="right"><a href="/colophon.html">Colophon</a></td>
     </tr>
   </table>
 </div>
