Add contacts to top navigation bar (rm r-intro)

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,8 +4,8 @@
   </br>
   NOAA Fisheries
   </br>
-  <a href="mailto:mjm@michaelmalick.com">mjm@michaelmalick.com</a>
-  </br>
+  <!-- <a href="mailto:mjm@michaelmalick.com">mjm@michaelmalick.com</a> -->
+  <!-- </br> -->
   <a href="https://twitter.com/michaelmalick">
     <img class="img_sidelink" src="/assets/images/tw-grey.png" alt="Twtr"/></a>
   <a href="https://github.com/michaelmalick">
