--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -4,7 +4,8 @@
       <td><a href="/">About</a></td>
       <td><a href="/cv">CV</a></td>
       <td><a href="/category/research">Research</a></td>
-      <td><a href="/r-intro">R Intro</a></td>
+      <!-- <td><a href="/r-intro">R Intro</a></td> -->
+      <td><a href="/contact">Contact</a></td>
     </tr>
   </table>
 </div>
