Update job title on sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class=name> <a href="/">Michael Malick</a></div>
 <div class = sideinfo>
-  Postdoctoral Researcher
+  Research Fish Biologist
   </br>
   NOAA Fisheries
   </br>
