--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,18 @@
 <html lang="en">
 <head>
 
+  <!-- Google tag (gtag.js) GA4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2F5C9BHL4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-S2F5C9BHL4');
+  </script>
+
+
+
   <!-- Basic Page Needs -->
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
@@ -13,7 +25,7 @@
   <meta name="msvalidate.01" content="2FFFAA9DC6DA7A95AAEF4DEE1377E7D1" />
 
 
-  <!-- Google Analytics -->
+  <!-- Google Universal Analytics -->
   <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-42838600-1']);
