Update job title

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,17 +1,17 @@
 <div class=name> <a href="/">Michael Malick</a></div>
 <div class = sideinfo>
-  Research Fish Biologist
+  Quantitative Ecologist
   </br>
   NOAA Fisheries
   </br>
   <!-- <a href="mailto:mjm@michaelmalick.com">mjm@michaelmalick.com</a> -->
   <!-- </br> -->
-  <a href="https://twitter.com/michaelmalick" target="_blank">
-    <img class="img_sidelink" src="/assets/images/tw-grey.png" alt="Twtr"/></a>
-  <a href="https://github.com/michaelmalick" target="_blank">
-    <img class="img_sidelink" src="/assets/images/github-grey.png" alt="GitHub"/></a>
+  <!-- <a href="https://twitter.com/michaelmalick" target="_blank"> -->
+  <!--   <img class="img_sidelink" src="/assets/images/tw-grey.png" alt="Twtr"/></a> -->
   <a href="https://scholar.google.com/citations?user=98VPn3kAAAAJ&hl" target="_blank">
     <img class="img_sidelink" src="/assets/images/google-grey.png" alt="Google Scholar"/></a>
+  <a href="https://github.com/michaelmalick" target="_blank">
+    <img class="img_sidelink" src="/assets/images/github-grey.png" alt="GitHub"/></a>
   <a href=" https://orcid.org/0000-0002-8376-5476" target="_blank">
     <img class="img_sidelink" src="/assets/images/orcid-grey.png" alt="ORCiD"/></a>
 </div>
